Adapt j2ee context to starterkit

--- a/sos/4.4.0/sos-configured/Dockerfile
+++ b/sos/4.4.0/sos-configured/Dockerfile
@@ -5,8 +5,9 @@ MAINTAINER Matthes Rieke <m.rieke@52north.org>
 
 RUN apt-get -y install netcat && apt-get clean
 
-COPY sos-config/configuration.db $CATALINA_HOME/webapps/52n-sos-webapp/
-COPY sos-config/datasource.properties $CATALINA_HOME/webapps/52n-sos-webapp/WEB-INF
+RUN mv $CATALINA_HOME/webapps/52n-sos-webapp/ $CATALINA_HOME/webapps/observations/
+COPY sos-config/configuration.db $CATALINA_HOME/webapps/observations/
+COPY sos-config/datasource.properties $CATALINA_HOME/webapps/observations/WEB-INF
 COPY tomcat-bin/* $CATALINA_HOME/bin
 
 RUN chmod +x $CATALINA_HOME/bin/*.sh
