--- a/sos/4.4.0/sos-configured/sos-config/datasource.properties
+++ b/sos/4.4.0/sos-configured/sos-config/datasource.properties
@@ -23,6 +23,6 @@ hibernate.c3p0.max_size=30
 org.n52.sos.ds.Datasource=org.n52.sos.ds.datasource.PostgresDatasource
 hibernate.connection.provider_class=org.hibernate.service.jdbc.connections.internal.C3P0ConnectionProvider
 hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialectSpatialIndex
-hibernate.connection.url=jdbc\:postgresql\://postgres\:5432/postgres
+hibernate.connection.url=jdbc\:postgresql\://dbsos\:5432/sos
 sos.database.concept=SERIES_CONCEPT
 hibernate.connection.testOnBorrow=true
