Fix missing option for yes

--- a/sos/4.4.0/sos-configured/Dockerfile
+++ b/sos/4.4.0/sos-configured/Dockerfile
@@ -16,7 +16,7 @@ COPY tomcat-bin/index.html $CATALINA_HOME/webapps/ROOT
 RUN apt-get update \
     && apt-get -y upgrade \
     && apt-get install -y python python-pip python-dev \
-    && apt-get install postgresql-client
+    && apt-get install -y postgresql-client
 
 COPY sos-config/requirements.txt /tmp
 COPY sos-config/entrypoint.sh /tmp
