Replace base web.xml with cors commented out

--- a/sos/4.4.2/sos-configured/Dockerfile
+++ b/sos/4.4.2/sos-configured/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get -y install netcat \
 
 COPY sos-config/configuration.db $CATALINA_HOME/webapps/observations/
 COPY sos-config/datasource.properties $CATALINA_HOME/webapps/observations/WEB-INF
+COPY tomcat-bin/web-observations.xml $CATALINA_HOME/webapps/observations/WEB-INF/web.xml
 COPY tomcat-bin/setenv.sh $CATALINA_HOME/bin
 COPY tomcat-bin/index.html $CATALINA_HOME/webapps/ROOT
 #COPY tomcat-bin/observations.xml $CATALINA_HOME/conf/Catalina/localhost
